--- a/themes/trc/style.css
+++ b/themes/trc/style.css
@@ -2219,6 +2219,8 @@ object {
   display: flex;
   height: 30rem;
   position: relative; }
+  .how-hero-wrapper .get-involved-sub-menu {
+    width: 100%; }
   .how-hero-wrapper img {
     margin-left: 2rem; }
   .how-hero-wrapper .custom-sub-menu-wrapper {
@@ -2270,54 +2272,6 @@ object {
 
 .how-hero-desktop {
   display: none; }
-  .how-hero-desktop .custom-sub-menu-wrapper {
-    display: none;
-    text-align: center;
-    background: white;
-    width: 100%; }
-    @media screen and (min-width: 640px) and (max-width: 2000px) {
-      .how-hero-desktop .custom-sub-menu-wrapper {
-        display: block;
-        background: rgba(255, 255, 255, 0.7);
-        width: 100%; } }
-    .how-hero-desktop .custom-sub-menu-wrapper .get-involved-sub-menu {
-      width: 100%; }
-    .how-hero-desktop .custom-sub-menu-wrapper ul {
-      width: 80%;
-      margin: 0 auto; }
-      @media screen and (min-width: 640px) and (max-width: 2000px) {
-        .how-hero-desktop .custom-sub-menu-wrapper ul {
-          display: -ms-flexbox;
-          display: flex;
-          -ms-flex-wrap: wrap;
-              flex-wrap: wrap;
-          -ms-flex-align: center;
-              align-items: center;
-          -ms-flex-pack: distribute;
-              justify-content: space-around;
-          width: 90%;
-          padding: 1rem; } }
-    .how-hero-desktop .custom-sub-menu-wrapper li {
-      font-family: 'Open Web';
-      font-weight: bold;
-      font-style: normal;
-      text-transform: uppercase;
-      font-size: 1.3rem;
-      border-bottom: 1px solid #3f3f3f;
-      padding: 1.9rem 0; }
-      .how-hero-desktop .custom-sub-menu-wrapper li:last-child {
-        border-bottom: none; }
-      @media screen and (min-width: 640px) and (max-width: 2000px) {
-        .how-hero-desktop .custom-sub-menu-wrapper li {
-          margin: 0 1rem;
-          border-bottom: none;
-          padding: 0;
-          font-family: 'Open Web';
-          font-weight: normal;
-          font-style: normal;
-          text-transform: none; } }
-    .how-hero-desktop .custom-sub-menu-wrapper a {
-      color: #072A3D; }
 
 .our-model-header-box {
   display: -ms-flexbox;
@@ -2508,6 +2462,62 @@ object {
     display: flex;
     height: 45rem;
     position: relative; }
+    .how-hero-desktop .custom-sub-menu-wrapper {
+      display: none;
+      text-align: center;
+      background: white;
+      width: 100%; } }
+    @media screen and (min-width: 640px) and (min-width: 640px) and (max-width: 2000px) {
+      .how-hero-desktop .custom-sub-menu-wrapper {
+        display: block;
+        background: rgba(255, 255, 255, 0.7);
+        width: 100%; } }
+
+@media screen and (min-width: 640px) {
+      .how-hero-desktop .custom-sub-menu-wrapper .get-involved-sub-menu {
+        width: 100%; }
+      .how-hero-desktop .custom-sub-menu-wrapper ul {
+        width: 80%;
+        margin: 0 auto; } }
+      @media screen and (min-width: 640px) and (min-width: 640px) and (max-width: 2000px) {
+        .how-hero-desktop .custom-sub-menu-wrapper ul {
+          display: -ms-flexbox;
+          display: flex;
+          -ms-flex-wrap: wrap;
+              flex-wrap: wrap;
+          -ms-flex-align: center;
+              align-items: center;
+          -ms-flex-pack: distribute;
+              justify-content: space-around;
+          width: 90%;
+          padding: 1rem; } }
+
+@media screen and (min-width: 640px) {
+      .how-hero-desktop .custom-sub-menu-wrapper li {
+        font-family: 'Open Web';
+        font-weight: bold;
+        font-style: normal;
+        text-transform: uppercase;
+        font-size: 1.3rem;
+        border-bottom: 1px solid #3f3f3f;
+        padding: 1.9rem 0; }
+        .how-hero-desktop .custom-sub-menu-wrapper li:last-child {
+          border-bottom: none; } }
+      @media screen and (min-width: 640px) and (min-width: 640px) and (max-width: 2000px) {
+        .how-hero-desktop .custom-sub-menu-wrapper li {
+          margin: 0 1rem;
+          border-bottom: none;
+          padding: 0;
+          font-family: 'Open Web';
+          font-weight: normal;
+          font-style: normal;
+          text-transform: none; } }
+
+@media screen and (min-width: 640px) {
+      .how-hero-desktop .custom-sub-menu-wrapper a {
+        color: #072A3D; }
+    .how-hero-desktop .get-involved-sub-menu {
+      width: 100%; }
   .dev-practices {
     text-align: center;
     font-family: 'Open Web';
@@ -2690,6 +2700,8 @@ object {
           text-transform: none; } }
     .global-goals-hero .custom-sub-menu-wrapper a {
       color: #072A3D; }
+  .global-goals-hero .get-involved-sub-menu {
+    width: 100%; }
 
 .sustainability-bar {
   display: -ms-flexbox;
@@ -3309,9 +3321,11 @@ object {
 .page-template-page-getinvolved .custom-sub-menu-wrapper {
   display: none;
   text-align: center;
-  background: white; }
+  background: white;
+  width: 100%; }
   @media screen and (min-width: 640px) and (max-width: 2000px) {
     .page-template-page-getinvolved .custom-sub-menu-wrapper {
+      width: 100%;
       display: block;
       background: rgba(255, 255, 255, 0.7); } }
   .page-template-page-getinvolved .custom-sub-menu-wrapper ul {
